--- a/浏览器/index2.html
+++ b/浏览器/index2.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>易参保</title>
-    <link href="css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="css/clearStyle.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/newStyle2.css">
 </head>
