--- a/浏览器/index.html
+++ b/浏览器/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>易参保</title>
     <link rel="stylesheet" href="css/clearStyle.css">
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/newStyle.css">
     <link type="text/css" rel="stylesheet" href="plugs/swiper/swiper.min.css">
@@ -32,19 +32,66 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#ad-carousel">首页</a></li>
+                <li class="active"><a href="#ad-carousels">首页</a></li>
                 <li id="company-sever"><a href="#summary-container">企业服务<span class="caret"></span></a>
-                    <div class="toggleAll row" role="menu" style="padding-top: 0px; margin-top: 0px; padding-bottom: 0px; margin-bottom: 0px;">
-						<div class="toggleAll_box">
-							<div class="toggleAll_boxLeft">
-								<h3>我们的服务</h3>
-							</div>
-							<div class="toggleAll_boxRight">
-								<h3>我们的产品</h3>
+                    <div class="nav_service_list">
+                        <div class="col-sm-12 col-md-6">
+                            <a class="nav_service_item" href="//www.51shebao.com/service/insure/">
+                                <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/social_security.png" alt="">
+                                <div class="nav_service_item_title">社保服务<p>全国109城直营网点</p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-6">
+                            <a class="nav_service_item" href="//www.51shebao.com/service/canbaojin/">
+                                <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/canbaojing.png" alt="">
+                                <div class="nav_service_item_title">残保金<p>残保金一站式解决方案</p>
+                                </div>
 
-							</div>
-						</div>
-					</div>
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-6">
+                            <a class="nav_service_item" href="//www.51shebao.com/service/pcalculation/">
+                                <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/salary_services.png" alt="">
+                                <div class="nav_service_item_title">薪酬服务<p>统一服务费10元/人次起</p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-6">
+                            <a class="nav_service_item" href="//www.51shebao.com/service/medical/">
+                                <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/all_ensure.png" alt="">
+                                <div class="nav_service_item_title">综合保障
+                                    <p>补充医疗/补充工伤</p>
+                                </div>
+
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-6">
+                            <a class="nav_service_item" href="//www.51shebao.com/service/calculation/">
+                                <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/xinshuibao.png" alt="">
+                                <div class="nav_service_item_title">薪税保<sup>®</sup>
+                                    <p>人资综合代理服务</p>
+                                </div>
+
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-6">
+                            <a class="nav_service_item" href="//www.51shebao.com/service/relation/">
+                                <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/relation.png" alt="">
+                                <div class="nav_service_item_title">用工关系解决方案
+                                    <p>激活企业用工自主权</p>
+                                </div>
+
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-6">
+                            <a class="nav_service_item" href="//www.51shebao.com/service/income_all/">
+                                <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/income_all.png" alt="">
+                                <div class="nav_service_item_title">收入结算<p>共享经济收入结算</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">个人服务 <span class="caret"></span></a>
@@ -67,17 +114,17 @@
 
 
 <!-- 广告轮播 -->
-<div id="ad-carousel" class="carousel slide" data-ride="carousel">
+<div id="ad-carousels" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
-        <li data-target="#ad-carousel" data-slide-to="0" class="active"></li>
-        <li data-target="#ad-carousel" data-slide-to="1"></li>
-        <li data-target="#ad-carousel" data-slide-to="2"></li>
-        <li data-target="#ad-carousel" data-slide-to="3"></li>
-        <li data-target="#ad-carousel" data-slide-to="4"></li>
+        <li data-target="#ad-carousels" data-slide-to="0" class="active"></li>
+        <li data-target="#ad-carousels" data-slide-to="1"></li>
+        <li data-target="#ad-carousels" data-slide-to="2"></li>
+        <li data-target="#ad-carousels" data-slide-to="3"></li>
+        <li data-target="#ad-carousels" data-slide-to="4"></li>
     </ol>
     <div class="carousel-inner">
         <div class="item active">
-            <img src="img/chrome-big.jpg" alt="1 slide">
+            <img src="./img/chrome-big.jpg" alt="1 slide">
 
             <div class="container">
                 <div class="carousel-caption">
@@ -89,7 +136,7 @@
             </div>
         </div>
         <div class="item">
-            <img src="img/firefox-big.jpg" alt="2 slide">
+            <img src="./img/firefox-big.jpg" alt="2 slide">
 
             <div class="container">
                 <div class="carousel-caption">
@@ -101,7 +148,7 @@
             </div>
         </div>
         <div class="item">
-            <img src="img/safari-big.jpg" alt="3 slide">
+            <img src="./img/safari-big.jpg" alt="3 slide">
 
             <div class="container">
                 <div class="carousel-caption">
@@ -138,9 +185,9 @@
         </div>
 
     </div>
-    <a class="left carousel-control" href="#ad-carousel" data-slide="prev"><span
+    <a class="left carousel-control" href="#ad-carousels" data-slide="prev"><span
             class="glyphicon glyphicon-chevron-left"></span></a>
-    <a class="right carousel-control" href="#ad-carousel" data-slide="next"><span
+    <a class="right carousel-control" href="#ad-carousels" data-slide="next"><span
             class="glyphicon glyphicon-chevron-right"></span></a>
     <div class="banner_tab">
         <div class="banner_tabBg"></div>
@@ -528,7 +575,7 @@
 <script src="plugs/swiper/swiper.min.js"></script>
 <script>
     $(function () {
-        $('#ad-carousel').carousel();
+        $('#ad-carousels').carousel();
         $('#menu-nav .navbar-collapse a').click(function (e) {
             var href = $(this).attr('href');
             var tabId = $(this).attr('data-tab');
