--- a/浏览器/index2.html
+++ b/浏览器/index2.html
@@ -26,17 +26,17 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#ad-carousel">首页</a></li>
-                    <li id="company-sever"><a href="#summary-container">企业服务<span class="caret"></span></a>
+                    <li id="company-sever"><a href="#">企业服务<span class="caret"></span></a>
                         <div class="nav_service_list">
                             <div class="col-sm-12 col-md-6">
-                                <a class="nav_service_item" href="//www.51shebao.com/service/insure/">
+                                <a class="nav_service_item" href="#" onclick="window.location='./index2.html'">
                                     <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/social_security.png" alt="">
                                     <div class="nav_service_item_title">社保服务<p>全国109城直营网点</p>
                                     </div>
                                 </a>
                             </div>
                             <div class="col-sm-12 col-md-6">
-                                <a class="nav_service_item" href="//www.51shebao.com/service/canbaojin/">
+                                <a class="nav_service_item" href="#" onclick="window.location='./index2.html'">
                                     <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/canbaojing.png" alt="">
                                     <div class="nav_service_item_title">残保金<p>残保金一站式解决方案</p>
                                     </div>
@@ -44,14 +44,14 @@
                                 </a>
                             </div>
                             <div class="col-sm-12 col-md-6">
-                                <a class="nav_service_item" href="//www.51shebao.com/service/pcalculation/">
+                                <a class="nav_service_item" href="#" onclick="window.location='./index2.html'">
                                     <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/salary_services.png" alt="">
                                     <div class="nav_service_item_title">薪酬服务<p>统一服务费10元/人次起</p>
                                     </div>
                                 </a>
                             </div>
                             <div class="col-sm-12 col-md-6">
-                                <a class="nav_service_item" href="//www.51shebao.com/service/medical/">
+                                <a class="nav_service_item" href="#" onclick="window.location='./index2.html'">
                                     <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/all_ensure.png" alt="">
                                     <div class="nav_service_item_title">综合保障
                                         <p>补充医疗/补充工伤</p>
@@ -60,7 +60,7 @@
                                 </a>
                             </div>
                             <div class="col-sm-12 col-md-6">
-                                <a class="nav_service_item" href="//www.51shebao.com/service/calculation/">
+                                <a class="nav_service_item" href="#" onclick="window.location='./index2.html'">
                                     <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/xinshuibao.png" alt="">
                                     <div class="nav_service_item_title">薪税保<sup>®</sup>
                                         <p>人资综合代理服务</p>
@@ -69,7 +69,7 @@
                                 </a>
                             </div>
                             <div class="col-sm-12 col-md-6">
-                                <a class="nav_service_item" href="//www.51shebao.com/service/relation/">
+                                <a class="nav_service_item" href="#" onclick="window.location='./index2.html'">
                                     <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/relation.png" alt="">
                                     <div class="nav_service_item_title">用工关系解决方案
                                         <p>激活企业用工自主权</p>
@@ -78,7 +78,7 @@
                                 </a>
                             </div>
                             <div class="col-sm-12 col-md-6">
-                                <a class="nav_service_item" href="//www.51shebao.com/service/income_all/">
+                                <a class="nav_service_item" href="#" onclick="window.location='./index2.html'">
                                     <img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/income_all.png" alt="">
                                     <div class="nav_service_item_title">收入结算<p>共享经济收入结算</p>
                                     </div>
@@ -89,11 +89,11 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">个人服务 <span class="caret"></span></a>
                         <ul class="dropdown-menu drop-width" role="menu">
-                            <li><a href="#feature-tab" data-tab="tab-chrome" onclick="window.location='./pages/index2.html'">社保</a></li>
-                            <li><a href="#feature-tab" data-tab="tab-firefox">综合保障</a></li>
-                            <li><a href="#feature-tab" data-tab="tab-safari">残保金</a></li>
-                            <li><a href="#feature-tab" data-tab="tab-opera">Opera</a></li>
-                            <li><a href="#feature-tab" data-tab="tab-ie">IE</a></li>
+                            <li><a href="#feature-tab" data-tab="tab-chrome" onclick="window.location='./index3.html'">社保</a></li>
+                            <li><a href="#feature-tab" data-tab="tab-firefox" onclick="window.location='./index3.html'">综合保障</a></li>
+                            <li><a href="#feature-tab" data-tab="tab-safari" onclick="window.location='./index3.html'">残保金</a></li>
+                            <li><a href="#feature-tab" data-tab="tab-opera" onclick="window.location='./index3.html'">Opera</a></li>
+                            <li><a href="#feature-tab" data-tab="tab-ie" onclick="window.location='./index3.html'">IE</a></li>
                         </ul>
                     </li>
                     <li><a href="#" data-toggle="modal" data-target="#about-modal">关于我们</a></li>
@@ -146,104 +146,178 @@
             </div>
         </div>
     </div>
-    <!-- 媒体资讯 -->
-    <div class="container summary">
-            <div class="news_out">
-            <div class="news_inner">
-                <ul class="news_ul">
+<!-- 媒体资讯 -->
+<div class="container summary">
+        <div class="news_out">
+        <div class="news_inner">
+            <ul class="news_ul">
+                <li>
+                    <dl class="news_summary">
+                        <dt>
+                            <a href="/news/report/detail-47"><img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/news/report/report_47/01.png"></a>
+                        </dt>
+                        <dd class="news_title">
+                            <a href="/news/report/detail-47">51社保代表出席政协海南省七届二次会议 为互联网企业发展建言献策
+                            </a>
+                        </dd>
+                        <dd class="news_con">2019年1月25日，政协海南省七届二次会议召开，51社保代表侯兆海作为特邀群众代表出席。侯兆海针对民营企业发展中所遇到的问题和互联网企业发展中需要的政府支持等问题进行了建言献策。
+                            <a href="/news/report/detail-47">查看详情 &gt;</a>
+                        </dd>
+                        <dd class="news_date">2019/01/25</dd>
+                    </dl>
+                </li>
+                <li>
+                    <dl class="news_summary">
+                        <dt>
+                            <a href="/news/report/detail-46"><img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/news/report/report_46/02.png"></a>
+                        </dt>
+                        <dd class="news_title">
+                            <a href="/news/report/detail-46">51社保技术 VP丁学被聘为2019中国智能制造百人会专家
+                            </a>
+                        </dd>
+                        <dd class="news_con">2019年1月10-11日，2018智造百强榜高峰会暨2019中国智能制造百人会年会在中国科技会堂成功举办，本届年会是百人会举办的第三届年会，主题为“智造让生活更美好”，旨在深入贯彻制造强国战略，以智能制造为主攻方向推动产业技术变革和优化升级，推进新一代智能制造赋能实体经济高质量发展。
+                            <a href="/news/report/detail-46">查看详情 &gt;</a>
+                        </dd>
+                        <dd class="news_date">2019/01/11</dd>
+                    </dl>
+                </li>
+                <li>
+                    <dl class="news_summary">
+                        <dt>
+                            <a href="/news/report/detail-45"><img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/news/report/report_45/03.png"></a>
+                        </dt>
+                        <dd class="news_title">
+                            <a href="/news/report/detail-45">革薪时代薪趋势——政策变革下的薪酬福利思维变革
+                            </a>
+                        </dd>
+                        <dd class="news_con">2018年12月27日，2018年度51社保首届中国企业薪酬福利高峰论坛在北京歌华开元大酒店隆重举行，近1000位 HR 负责人、薪酬福利负责人和相关人士共聚此次“革薪时代——首届中国企业薪酬福利高峰论坛”，会议同时发布了《2019中国企业薪酬福利访谈录》。
+                            本次高峰论坛由51社保和优咖学院独家冠名，同路、同窗、好社保和 HRSAY 协办，HR实名俱乐部和 HR合伙人大学合作支持。
+                            <a href="/news/report/detail-45">查看详情 &gt;</a>
+                        </dd>
+                        <dd class="news_date">2018/12/27</dd>
+                    </dl>
+                </li>
+            </ul>
+            <ul class="news_ul">
                     <li>
                         <dl class="news_summary">
-                            <dt>
-                                <a href="/news/report/detail-47"><img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/news/report/report_47/01.png"></a>
-                            </dt>
-                            <dd class="news_title">
+                            <dd class="news_title_noimg">
                                 <a href="/news/report/detail-47">51社保代表出席政协海南省七届二次会议 为互联网企业发展建言献策
                                 </a>
                             </dd>
-                            <dd class="news_con">2019年1月25日，政协海南省七届二次会议召开，51社保代表侯兆海作为特邀群众代表出席。侯兆海针对民营企业发展中所遇到的问题和互联网企业发展中需要的政府支持等问题进行了建言献策。
+                            <dd class="news_con_noimg">2019年1月25日，政协海南省七届二次会议召开，51社保代表侯兆海作为特邀群众代表出席。侯兆海针对民营企业发展中所遇到的问题和互联网企业发展中需要的政府支持等问题进行了建言献策。
                                 <a href="/news/report/detail-47">查看详情 &gt;</a>
                             </dd>
-                            <dd class="news_date">2019/01/25</dd>
+                            <dd class="news_date_noimg">2019/01/25</dd>
                         </dl>
                     </li>
                     <li>
                         <dl class="news_summary">
-                            <dt>
-                                <a href="/news/report/detail-46"><img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/news/report/report_46/02.png"></a>
-                            </dt>
-                            <dd class="news_title">
+                            <dd class="news_title_noimg">
                                 <a href="/news/report/detail-46">51社保技术 VP丁学被聘为2019中国智能制造百人会专家
                                 </a>
                             </dd>
-                            <dd class="news_con">2019年1月10-11日，2018智造百强榜高峰会暨2019中国智能制造百人会年会在中国科技会堂成功举办，本届年会是百人会举办的第三届年会，主题为“智造让生活更美好”，旨在深入贯彻制造强国战略，以智能制造为主攻方向推动产业技术变革和优化升级，推进新一代智能制造赋能实体经济高质量发展。
+                            <dd class="news_con_noimg">2019年1月10-11日，2018智造百强榜高峰会暨2019中国智能制造百人会年会在中国科技会堂成功举办，本届年会是百人会举办的第三届年会，主题为“智造让生活更美好”，旨在深入贯彻制造强国战略，以智能制造为主攻方向推动产业技术变革和优化升级，推进新一代智能制造赋能实体经济高质量发展。
                                 <a href="/news/report/detail-46">查看详情 &gt;</a>
                             </dd>
-                            <dd class="news_date">2019/01/11</dd>
+                            <dd class="news_date_noimg">2019/01/11</dd>
                         </dl>
                     </li>
                     <li>
                         <dl class="news_summary">
-                            <dt>
-                                <a href="/news/report/detail-45"><img src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/news/report/report_45/03.png"></a>
-                            </dt>
-                            <dd class="news_title">
+                            <dd class="news_title_noimg">
                                 <a href="/news/report/detail-45">革薪时代薪趋势——政策变革下的薪酬福利思维变革
                                 </a>
                             </dd>
-                            <dd class="news_con">2018年12月27日，2018年度51社保首届中国企业薪酬福利高峰论坛在北京歌华开元大酒店隆重举行，近1000位 HR 负责人、薪酬福利负责人和相关人士共聚此次“革薪时代——首届中国企业薪酬福利高峰论坛”，会议同时发布了《2019中国企业薪酬福利访谈录》。
+                            <dd class="news_con_noimg">2018年12月27日，2018年度51社保首届中国企业薪酬福利高峰论坛在北京歌华开元大酒店隆重举行，近1000位 HR 负责人、薪酬福利负责人和相关人士共聚此次“革薪时代——首届中国企业薪酬福利高峰论坛”，会议同时发布了《2019中国企业薪酬福利访谈录》。
                                 本次高峰论坛由51社保和优咖学院独家冠名，同路、同窗、好社保和 HRSAY 协办，HR实名俱乐部和 HR合伙人大学合作支持。
                                 <a href="/news/report/detail-45">查看详情 &gt;</a>
                             </dd>
-                            <dd class="news_date">2018/12/27</dd>
+                            <dd class="news_date_noimg">2018/12/27</dd>
                         </dl>
                     </li>
                 </ul>
-                <ul class="news_ul">
-                        <li>
-                            <dl class="news_summary">
-                                <dd class="news_title_noimg">
-                                    <a href="/news/report/detail-47">51社保代表出席政协海南省七届二次会议 为互联网企业发展建言献策
-                                    </a>
-                                </dd>
-                                <dd class="news_con_noimg">2019年1月25日，政协海南省七届二次会议召开，51社保代表侯兆海作为特邀群众代表出席。侯兆海针对民营企业发展中所遇到的问题和互联网企业发展中需要的政府支持等问题进行了建言献策。
-                                    <a href="/news/report/detail-47">查看详情 &gt;</a>
-                                </dd>
-                                <dd class="news_date_noimg">2019/01/25</dd>
-                            </dl>
-                        </li>
-                        <li>
-                            <dl class="news_summary">
-                                <dd class="news_title_noimg">
-                                    <a href="/news/report/detail-46">51社保技术 VP丁学被聘为2019中国智能制造百人会专家
-                                    </a>
-                                </dd>
-                                <dd class="news_con_noimg">2019年1月10-11日，2018智造百强榜高峰会暨2019中国智能制造百人会年会在中国科技会堂成功举办，本届年会是百人会举办的第三届年会，主题为“智造让生活更美好”，旨在深入贯彻制造强国战略，以智能制造为主攻方向推动产业技术变革和优化升级，推进新一代智能制造赋能实体经济高质量发展。
-                                    <a href="/news/report/detail-46">查看详情 &gt;</a>
-                                </dd>
-                                <dd class="news_date_noimg">2019/01/11</dd>
-                            </dl>
-                        </li>
-                        <li>
-                            <dl class="news_summary">
-                                <dd class="news_title_noimg">
-                                    <a href="/news/report/detail-45">革薪时代薪趋势——政策变革下的薪酬福利思维变革
-                                    </a>
-                                </dd>
-                                <dd class="news_con_noimg">2018年12月27日，2018年度51社保首届中国企业薪酬福利高峰论坛在北京歌华开元大酒店隆重举行，近1000位 HR 负责人、薪酬福利负责人和相关人士共聚此次“革薪时代——首届中国企业薪酬福利高峰论坛”，会议同时发布了《2019中国企业薪酬福利访谈录》。
-                                    本次高峰论坛由51社保和优咖学院独家冠名，同路、同窗、好社保和 HRSAY 协办，HR实名俱乐部和 HR合伙人大学合作支持。
-                                    <a href="/news/report/detail-45">查看详情 &gt;</a>
-                                </dd>
-                                <dd class="news_date_noimg">2018/12/27</dd>
-                            </dl>
-                        </li>
-                    </ul>
-            </div>
         </div>
     </div>
-    <!-- 回到顶部 -->
-    <div class="right-bottom">
-        <a href="#top" title="回到顶部"><img src="./img/icon-totop.png" class="totop-icon"></a>
+</div>
+<!-- 回到顶部 -->
+<div class="right-bottom">
+    <a href="#top" title="回到顶部"><img src="./img/icon-totop.png" class="totop-icon"></a>
+</div>
+<!-- 扫码关注 -->
+<section class="my-scan">
+    <div class="des">
+        <p>微信扫描二维码 关注易参保</p>
+        <p>社保问题，交给我们</p>
     </div>
+    <img class="code" src="./img/qrcode.jpg">
+</section>
+<!--底部-->
+<div class="footer">
+    <div class="footer-container">
+        <a href="/index">
+            <div class="footer-l"></div>
+        </a>
+        <div class="footer-m">
+            <dl>
+            <dt>
+                关于我们
+            </dt>
+            <dd>
+                <a href="pages/about.html" target="_blank">公司介绍</a>
+            </dd>
+            <dd>
+                <a href="pages/lawExplain.html" target="_blank">法律声明</a>
+            </dd>
+            <dd>
+                <a href="pages/contact.html" target="_blank">联系我们</a>
+            </dd>
+            </dl>
+            <dl>
+
+            <dt>
+                商务支持
+            </dt>
+            <dd>
+                <a href="pages/supplierArea.html" target="_blank">社保覆盖城市</a>
+            </dd>
+
+            </dl>
+
+        </div>
+        <div class="footer-r">
+            <div class="clearfix"></div>
+            <div class="left">
+                <p class="write">免费热线：</p>
+                <p class="hot-line">4009-988-988</p>
+                <p>周一到周五 09:00——18:30</p>
+                <button class="hide">服务邮箱：jjshebao@jjshebao.com</button>
+                <p style="margin-top:5px;">服务邮箱：service@jjshebao.com</p>
+                <p class="address">公司地址：厦门软件二期观日路18号</p>
+            </div>
+            <div class="right">
+                <img src="img/qrcode.jpg">
+            </div>
+        </div>
+        <div class="link">
+        <div class="friend-link">
+            <ul>
+                <li>友情连接：</li>
+                <li><a type="button" href="http://www.fjshldbx.com.cn/" target="_blank" class="btn btn-link text-muted goto ">福建省社会劳动保险局</a></li>
+                <li><a type="button" href="http://www.fujian.gov.cn/" target="_blank" class="btn btn-link text-muted goto ">福建省人民政府门户网站</a></li>
+                <li><a type="button" href="http://www.fjrs.gov.cn/" target="_blank" class="btn btn-link text-muted goto ">福建省人力资源和社会保障厅</a></li>
+                <li><a type="button" href="http://www.fjylbz.gov.cn/" target="_blank" class="btn btn-link text-muted goto ">福建医疗保障</a></a></li>
+            </ul>
+        </div>
+
+        <p> 易联众民生（厦门）科技有限公司 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="http://www.miitbeian.gov.cn" target="_blank" style="color: #999;"> 备案/许可证号：闽ICP备05020898号</a>
+        </p>
+        <div class="link-img">
+            <img src="img/trust.png">
+        </div>
+    </div>
+</div>
 <script src="js/jquery-1.11.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script>
