--- a/浏览器/index3.html
+++ b/浏览器/index3.html
@@ -311,8 +311,8 @@
     </section>
 </div>
 <!--标准化服务 合法合规降本增效 -->
-<div class="index_list relation_section3">
-    <section class="index_list_item xinchou_list clearFix">
+<div class="index_list server_list_section">
+    <section class="index_list_item server_list clearFix">
         <h4 class="index_list_item_title">标准化服务 合法合规降本增效</h4>
         <img class="fr" src="https://static.cache.51shebao.com/201908131201/statics/output/images/v6_images/index/pic_jiesuan.png" alt="">
         <ul class="fl  left-info">
